--- a/FrontEnd/day10/styles.css
+++ b/FrontEnd/day10/styles.css
@@ -19,14 +19,15 @@
     width: 100%;
     /* background-color: lightgreen; */
     justify-content: center;
+    padding: 10px;
 }
 
 .card {
     width: 24%;
-    min-height: 120px;
     background-color: lightgray;
     display: flex;
     justify-content: center;
+    align-items: center;
     display: none;
     margin: auto;
     margin-bottom: 10px;
@@ -39,14 +40,13 @@
 }
 
 .card>img {
-    margin: auto;
     max-width: 100%;
     max-height: 100%;
     display: flex;
     visibility: hidden;
     border-radius: 5px;
-    border: 2px solid black;
-
+    margin: auto;
+    /* border: 2px solid black; */
 }
 
 
@@ -56,7 +56,7 @@
 }
 
 .rotateEnd {
-    transform: rotateY(-180deg);
+    transform: rotateY(0deg);
     transition: 0.8s;
 
 }
